# CommerceX

./: .gitignore  QUICKSTART.md  README.md  SERVER_STATUS.md  START_SERVERS.md  simple_backend.py
oopsProject/: .env.example  .gitignore  ADMIN_SEARCH_FEATURES.md  API_DOCUMENTATION.md  API_QUICK_REFERENCE.md  COMPLETE_DATA_ML_GUIDE.md  COMPLETE_IMPLEMENTATION.md  COMPLETION_SUMMARY.md  DATABASE_OPTIMIZATION.md  DEPENDENCIES.md  DEPLOYMENT_GUIDE.md  ECOMMERCE_FEATURES_COMPLETE.md  FEATURES_COMPLETE.md  FINAL_CHECKLIST.md  FINAL_PROJECT_STATUS.md  FINAL_STATUS.md  IMPLEMENTATION_GUIDE.md  INDEX.md  INSTALLATION.md  MIGRATION_GUIDE.md  ML_INTEGRATION_COMPLETE.md  NEW_FEATURES_SUMMARY.md  NEXT_STEPS.md  PROJECT_COMPLETE.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  QUALITY_IMPROVEMENTS_SUMMARY.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  SETUP_GUIDE.md  TEST_API.md  pyproject.toml  pytest.ini  requirements-minimal.txt  requirements.txt  setup.sh
oopsProject/app/: __init__.py  main.py
oopsProject/app/api/: __init__.py  deps.py
oopsProject/app/config/: __init__.py  database.py  redis_client.py  settings.py
oopsProject/app/core/: __init__.py  base_classes.py  cache.py  exceptions.py  (+5 more)
oopsProject/docker/: Dockerfile  Dockerfile.celery  docker-compose.yml
oopsProject/migrations/: env.py
oopsProject/requirements/: base.txt  dev.txt  ml.txt
oopsProject/scripts/: generate_mock_data.py  realistic_product_data.py  train_ml_models.py
oopsProject/tests/: README.md  __init__.py  conftest.py  test_auth.py  test_cart.py  test_orders.py  test_payments.py  test_products.py
(+112 files in other folders)
